# zenviron_2

./: .gitignore  Dockerfile.jupyter  README.md  THREAD_HANDOFF.md  docker-compose.yml  pyproject.toml  version.md
skills/module-kanban-m/resources/module/: .dockerignore  AGENTS.md  CHANGELOG.md  Dockerfile  README.md  code 2.html  pyproject.toml
skills/module-kanban-m/resources/module/apps/backend/: Dockerfile
skills/module-kanban-m/resources/module/apps/frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
skills/module-kanban-m/resources/module/apps/frontend/src/: App.tsx  main.tsx  styles.css
skills/module-kanban-m/resources/module/deploy/: docker-compose.mysql.yml
skills/module-kanban-m/resources/module/docs/: Readme.md
skills/module-kanban-m/resources/module/docs/connectivity/: Readme.md  database-config.md  embedding-function.md  serve-machine.md
skills/module-kanban-m/resources/module/docs/handover/: 01-system-overview.md  02-feature-spec.md  03-known-issues-and-risks.md  04-improvement-plan.md  05-usage-manual.md  06-testing-and-cases.md  07-deployment-manual.md  08-ops-runbook.md  README.md
skills/module-kanban-m/resources/module/docs/plans/: Readme.md
skills/module-kanban-m/resources/module/docs/project-progress/: GANTT.md  PROGRESS_DETAILS.md  Readme.md
skills/module-kanban-m/resources/module/docs/project-progress/00-OriginalDemand/: original_demand.md
skills/module-kanban-m/resources/module/tests/: test_api.py
skills/module-llm-config-manager/resources/module/payload/: README.md  pyproject.toml
skills/module-llm-config-manager/resources/module/payload/config/: llm_providers.toml
skills/module-llm-config-manager/resources/module/payload/handover/: 01-system-overview.md  02-feature-spec.md  03-user-guide.md  04-test-plan-and-cases.md  05-known-issues-and-improvements.md  06-deployment-operations.md  07-api-reference.md  README.md
skills/monorepo/resources/clean-backend-v2/: .dockerignore  .env.example  .gitignore  Dockerfile  docker-compose.yml  gunicorn_config.py  pyproject.toml
skills/monorepo/resources/clean-backend-v2/app/: __init__.py  config.py  extensions.py
skills/monorepo/resources/clean-backend-v2/app/api/: readme.md
skills/monorepo/resources/clean-backend-v2/app/schemas/: __init__.py
skills/monorepo/resources/clean-backend-v2/app/services/: __init__.py
skills/monorepo/resources/clean-backend-v2/app/utils/: __init__.py  datetime_utils.py
skills/monorepo/resources/clean-backend-v2/deploy/: .env.pred.green
skills/monorepo/resources/clean-backend-v2/deploy/nginx/: Readme.md
skills/monorepo/resources/clean-backend-v2/scripts/: smtp_stability_probe.py  start.sh
skills/monorepo/resources/module-login-m/resources/module/: Dockerfile  INTEGRATION.md  README.md  pyproject.toml
tests/: test_cli.py  (+1 more)
(+259 files in other folders)
