[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zenviron"
version = "0.2.0"
description = "AI-ready template and skills distribution CLI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
 "typer>=0.12.3",
]

[project.scripts]
zenviron = "zenviron.cli:app"

[tool.setuptools.package-data]
zenviron = [ "config.yaml",]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = [ "tests",]
pythonpath = [ "src",]
