[project]
name = "login-m"
version = "0.1.0"
description = "AI-ready monorepo project"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "sqlmodel>=0.0.22",
  "pymysql>=1.1.1",
  "pydantic[email]>=2.8.0",
  "pyjwt>=2.9.0",
  "passlib[bcrypt]>=1.7.4",
  "python-multipart>=0.0.9",
  "httpx>=0.28.0",
  "requests>=2.32.0",
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=apps/backend/login_m_backend --cov-report=term-missing --cov-fail-under=80"
pythonpath = ["."]
